aura-modules/src/test/modules/invalidmodule/examples-non-existant/examples-non-existant.js
import { Element } from 'engine';

export default class ExamplesNonExistantDoc extends Element {} 